Update: Display Name

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -5,7 +5,7 @@ license = "Custom"
 [[mods]]
 modId = "nethervinery"
 version = "${version}"
-displayName = "Nether Vinery"
+displayName = "[Let's Do] NetherVinery"
 authors = "satisfyu"
 icon = "pack.png"
 description = '''
