--- a/common/build.gradle
+++ b/common/build.gradle
@@ -8,7 +8,7 @@ loom {
 
 dependencies {
     modApi "dev.architectury:architectury:${rootProject.architectury_version}"
-    modImplementation "maven.modrinth:vinery:${project.vinery_version}-fabric"
+    modImplementation "maven.modrinth:lets-do-vinery:${project.vinery_version}-fabric"
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     modImplementation "maven.modrinth:do-api:${project.doapi_version}-fabric"
     modCompileOnly ("me.shedaniel:RoughlyEnoughItems-api:$rei_version") { exclude group: 'net.fabricmc', module: 'fabric-loader' }
