--- a/common/src/main/resources/assets/nethervinery/models/block/warped_apple_press.json
+++ b/common/src/main/resources/assets/nethervinery/models/block/warped_apple_press.json
@@ -4,7 +4,7 @@
 		"2": "nethervinery:block/warped_cabinet_side",
 		"3": "nethervinery:block/warped_cabinet_top",
 		"5": "nethervinery:block/warped_fermen_barrel_front",
-		"6": "vinery:block/stove_top",
+		"6": "nethervinery:block/warped_fermen_barrel_top",
 		"7": "nethervinery:block/warped_fermen_barrel_side",
 		"particle": "nethervinery:block/warped_fermen_barrel_bottom"
 	},
@@ -66,12 +66,12 @@
 			"to": [10, 31.5, 10],
 			"rotation": {"angle": 0, "axis": "y", "origin": [8.2, 15.875, 7.7]},
 			"faces": {
-				"north": {"uv": [5, 5, 9, 6], "texture": "#6"},
-				"east": {"uv": [7, 13, 11, 14], "texture": "#6"},
-				"south": {"uv": [7, 3, 11, 4], "texture": "#6"},
-				"west": {"uv": [5, 13, 9, 14], "texture": "#6"},
-				"up": {"uv": [7, 10, 11, 14], "rotation": 90, "texture": "#6"},
-				"down": {"uv": [10, 11, 14, 15], "rotation": 270, "texture": "#6"}
+				"north": {"uv": [8, 5, 12, 6], "texture": "#6"},
+				"east": {"uv": [8, 5, 12, 6], "texture": "#6"},
+				"south": {"uv": [8, 5, 12, 6], "texture": "#6"},
+				"west": {"uv": [8, 5, 12, 6], "texture": "#6"},
+				"up": {"uv": [6, 6, 10, 10], "rotation": 90, "texture": "#6"},
+				"down": {"uv": [6, 6, 10, 10], "rotation": 90, "texture": "#6"}
 			}
 		},
 		{
